--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="row" id="move" >
             <div class="col-sm-4">
                 <div class="pic">
-                  <img width="600px" height="700px" src="image\Screenshot 2023-06-29 162348.png" alt="">
+                  <img width="600px" height="700px" src="Screenshot 2023-06-29 162348.png" alt="">
                 </div>
             </div>
             <div class="col-sm-6">
@@ -299,7 +299,7 @@
            </div>
             </div>
            <div class="phot">
-            <img width="500px" height="500px" src="image\Screenshot 2023-06-29 192955.png" alt="">
+            <img width="500px" height="500px" src="Screenshot 2023-06-29 192955.png" alt="">
            </div>
 
         </div>
